8319408: RISC-V: MaxVectorSize is not consistently checked in several situations

Reviewed-by: fyang